--- a/style.css
+++ b/style.css
@@ -1,25 +1,77 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
 
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
 
-#textbox{
+#background-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+main {
+    background-color: #a3d09efc;
+    display: inline-block;
+    padding: 40px;
+    text-align: center;
+    border-radius: 10px;
+    border-radius: 10px solid blue;
+}
+
+#textbox {
     height: 100px;
     width: 400px;
     border: 1px solid black;
     border-radius: 10px;
     background-color: hsl(100, 0%, 98%);
     box-shadow: 5px 5px 15px #000000;
-    margin:auto;
-    font-size:200%;
-    align-content: center;
+    margin: auto;
+    font-size: 200%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    
-    
-    
 }
-#btn{
-    margin:auto; 
-    margin-left:42% ;
+
+#btn {
+    display: block;
+    margin: 20px auto;
     border-radius: 10px;
     cursor: pointer;
 }
 
+label, input {
+    display: inline;
+    margin: 10px auto;
+    text-align: center;
+}
 
+#contain {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
